--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="delete">Delete</string>
     <string name="contact_details">Contact Details</string>
     <string name="ok_tv">OK</string>
+    <string name="areusure">Are u sure ?</string>
+    <string name="proceed">Proceed</string>
+    <string name="cancel">Cancel</string>
 
     <style name="entername_ca">Enter name..</style>
     <style name="enterphone_ca">Enter Phone..</style>
